--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,12 @@ build:
   tags: 
     - k8s
   script:
-    - yum -y install hugo
+    - yum -y install hugo openssh-clients
     - cd driconnect && hugo
     - ls -lR
+    - echo "nothing to see; move along..." > driconnect/public/index.html
+    - chmod go-rwx $driconnect_deploy
+    - ssh -oStrictHostkeyChecking=no -i $driconnect_deploy driconnect@driconnect.sharcnet.ca nothing
+    - date
+15
+ 
