--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,9 @@ build:
     - k8s
   script:
     - yum -y install hugo openssh-clients rsync
-    - (cd driconnect && hugo)
+    - (cd driconnect && hugo -t mini)
     - ls -lR
-    - echo "nothing to see; move along..." > driconnect/public/index.html
+#    - echo "nothing to see; move along..." > driconnect/public/index.html
     - chmod go-rwx $driconnect_content
     - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" driconnect/public/ content@driconnect.sharcnet.ca:/var/www/html
     - date
