--- a/driconnect/config.toml
+++ b/driconnect/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://driconnect.sharcnet.ca/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'DRIConnect site'
 theme = 'mini'
