OK, so push to site

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,6 @@ build:
     - git submodule update
     - hugo -t mini
     - ls -lR
-#    - echo "nothing to see; move along..." > driconnect/public/index.html
-#    - chmod go-rwx $driconnect_content
-#    - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" driconnect/public/ content@driconnect.sharcnet.ca:/var/www/html
+    - chmod go-rwx $driconnect_content
+    - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" driconnect/public/ content@driconnect.sharcnet.ca:/var/www/html
  
