--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "driconnect/themes/mini"]
 	path = driconnect/themes/mini
 	url = https://github.com/nodejh/hugo-theme-mini.git
+[submodule "driconnect/themes/paige"]
+	path = driconnect/themes/paige
+	url = https://github.com/willfaught/paige
