--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ build:
     - cd driconnect
     - git submodule init
     - git submodule update
-    - hugo -t mini
-    - ls -lR
+    - hugo -t paige
+    - ls -ltR
+    - id
     - chmod go-rwx $driconnect_content
     - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" public/ content@driconnect.sharcnet.ca:/var/www/html
  
