--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,5 +12,5 @@ build:
     - ls -ltR
     - id
     - chmod go-rwx $driconnect_content
-    - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" public/ content@driconnect.sharcnet.ca:/var/www/html
+    - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" . content@driconnect.sharcnet.ca:stuff
  
