Manual install of Hugo 0.110.0

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,14 @@ build:
   tags: 
     - k8s
   script:
-    - yum -y install git hugo openssh-clients rsync wget
-    - wget https://github.com/sass/dart-sass-embedded/releases/download/1.60.0/sass_embedded-1.60.0-linux-x64.tar.gz
-    - tar -zxf sass_embedded-1.60.0-linux-x64.tar.gz
-    - export PATH=$PWD/sass_embedded:$PATH
+    - yum -y install git openssh-clients rsync wget
+    - HUGO_VER=0.110.0
+    - DART_VER=1.60.0
+    - wget https://github.com/gohugoio/hugo/releases/download/v$HUGO_VER/hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
+    - wget https://github.com/sass/dart-sass-embedded/releases/download/$DART_VER/sass_embedded-${DART_VER}-linux-x64.tar.gz
+    - tar -zxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
+    - tar -zxf sass_embedded-${DART_VER}-linux-x64.tar.gz
+    - export PATH=$PWD/sass_embedded:$PWD:$PATH
     - cd driconnect
     - git submodule init
     - git submodule update
