--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build:
     - wget https://github.com/sass/dart-sass-embedded/releases/download/$DART_VER/sass_embedded-${DART_VER}-linux-x64.tar.gz
     - tar -zxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
     - tar -zxf sass_embedded-${DART_VER}-linux-x64.tar.gz
+    - chmod a+rx dart-sass-embedded
     - export PATH=$PWD/sass_embedded:$PWD:$PATH
     - cd driconnect
     - git submodule init
