--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ build:
     - tar -zvvxf sass_embedded-${DART_VER}-linux-x64.tar.gz
 #    - chmod a+rx sass_embedded/dart-sass-embedded
     - export PATH=$PWD/sass_embedded:$PWD:$PATH
+    - which dart-sass-embedded
+    - file sass_embedded/dart-sass-embedded
     - cd driconnect
     - git submodule init
     - git submodule update
