--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,21 @@
-image: klakegg/hugo:0.107.0-ext-alpine-ci
+#image: klakegg/hugo:0.107.0-ext-alpine-ci
+image: alpine:latest
 build:
   stage: build
   tags: 
     - k8s
   script:
-    - apk add openssh-client rsync wget
-#    - HUGO_VER=0.110.0
-#    - wget https://github.com/gohugoio/hugo/releases/download/v$HUGO_VER/hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
-#    - tar -zvvxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
+    - which wget
+    - which git
+    - which ssh
+    - which rsync
+    - apk add git openssh-client rsync wget
+    - HUGO_VER=0.110.0
+    - wget https://github.com/gohugoio/hugo/releases/download/v$HUGO_VER/hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
+    - tar -zvvxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
     - DART_VER=1.60.0
     - wget https://github.com/sass/dart-sass-embedded/releases/download/$DART_VER/sass_embedded-${DART_VER}-linux-x64.tar.gz
     - tar -zvvxf sass_embedded-${DART_VER}-linux-x64.tar.gz
-#    - chmod a+rx sass_embedded/dart-sass-embedded
     - export PATH=$PWD/sass_embedded:$PWD:$PATH
     - cd driconnect
     - which dart-sass-embedded
@@ -21,4 +25,4 @@ build:
     - ls -ltR
     - chmod go-rx $driconnect_content
     - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" public/ content@driconnect.sharcnet.ca:/var/www/html
-    - echo placeholder, please ignore
+
