--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build:
     - export PATH=$PWD/sass_embedded:$PWD:$PATH
     - cd driconnect
     - which dart-sass-embedded
+    - which hugo
     - git submodule init
     - git submodule update
     - hugo -t paige
