--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ build:
     - cd driconnect
     - which dart-sass-embedded
     - which hugo
+    - ls -l `which hugo`
+    - ldd `which hugo`
     - git submodule init
     - git submodule update
     - hugo -t paige
