needs more than one letter oc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ build:
   tags: 
     - k8s
   script:
-    - apt add wget git openssh-client rsync wget
+    - apt install wget git openssh-client rsync wget
     - HUGO_VER=0.110.0
     - wget https://github.com/gohugoio/hugo/releases/download/v$HUGO_VER/hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
     - tar -zvvxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
