--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
     - apt update
     - apt search rsync
     - apt install rsync
-    - apt install wget git openssh-client
+    - apt -y install wget git openssh-client
     - HUGO_VER=0.110.0
     - wget https://github.com/gohugoio/hugo/releases/download/v$HUGO_VER/hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
     - tar -zvvxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
