--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,7 @@ build:
     - k8s
   script:
     - apt update
-    - apt search rsync
-    - apt install rsync
-    - apt -y install wget git openssh-client
+    - apt-get -y install wget git openssh-client rsync
     - HUGO_VER=0.110.0
     - wget https://github.com/gohugoio/hugo/releases/download/v$HUGO_VER/hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
     - tar -zvvxf hugo_extended_${HUGO_VER}_linux-amd64.tar.gz
