--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ build:
     - git submodule update
     - hugo -t paige
     - ls -ltR
-    - chmod go-rx $driconnect_content
+    - echo $driconnect_content
+    - chmod 0600 $driconnect_content
     - rsync -a --stats -e "ssh -oStrictHostkeyChecking=no -i $driconnect_content" public/ content@driconnect.sharcnet.ca:/var/www/html
 
