Move build script and change site name

--- a/driconnect/config.yaml
+++ b/driconnect/config.yaml
@@ -1,4 +1,4 @@
-baseurl: "https://driconnect.alliancecan.ca/"
+baseurl: "https://driconnectdemo.alliancecan.ca/"
 copyright: "© 2023 Digital Research Alliance of Canada | Alliance de recherche numérique du Canada"
 enablerobotstxt: false
 
