--- a/driconnect/config.yaml
+++ b/driconnect/config.yaml
@@ -27,9 +27,12 @@ languages:
       - name: "Registration"
         url: "/registration/"
         weight: 3
+      - name: "Accommodations"
+        url: "/accommodations/"
+        weight: 4
       - name: "Location"
         url: "/location/"
-        weight: 4
+        weight: 5
       - name: "=> Français / Accueil"
         url: "/fr/"
         weight: 99
@@ -47,9 +50,12 @@ languages:
       - name: "Inscription"
         url: "/fr/inscription/"
         weight: 3
+      - name: "Hébergement"
+        url: "/fr/hebergement/"
+        weight: 4
       - name: "Lieu"
         url: "/fr/lieu/"
-        weight: 4
+        weight: 5
       - name: "=> English / Home"
         url: "/"
         weight: 99
