Changeing base name for site

--- a/driconnect/config.yaml
+++ b/driconnect/config.yaml
@@ -1,4 +1,4 @@
-baseurl: "https://driconnectdemo.alliancecan.ca/"
+baseurl: "https://spring2023--driconnectdemo.netlify.app/"
 copyright: "© 2023 Digital Research Alliance of Canada | Alliance de recherche numérique du Canada"
 enablerobotstxt: false
 
