--- a/driconnect/config.yaml
+++ b/driconnect/config.yaml
@@ -24,9 +24,12 @@ languages:
       - name: "Program"
         url: "/program/"
         weight: 2
-      - name: "Attending"
-        url: "/attending/"
-        weight: 3
+      - name: "Registration"
+        url: "/registration/"
+        weight: 3  
+      #- name: "Attending"
+        #url: "/attending/"
+        #weight: 3
       #- name: "Accommodations"
         #url: "/accommodations/"
         #weight: 4
@@ -47,9 +50,12 @@ languages:
       - name: "Programme"
         url: "/fr/programme/"
         weight: 2
-      - name: "Information"
-        url: "/fr/information/"
-        weight: 3
+      - name: "Inscription"
+        url: "/inscription/"
+        weight: 3  
+      #- name: "Information"
+        #url: "/fr/information/"
+        #weight: 3
       #- name: "Hébergement"
         #url: "/fr/hebergement/"
         #weight: 4
