--- a/driconnect/config.yaml
+++ b/driconnect/config.yaml
@@ -33,8 +33,8 @@ languages:
       #- name: "Accommodations"
         #url: "/accommodations/"
         #weight: 4
-      - name: "Location"
-        url: "/location/"
+      - name: "Venue"
+        url: "/venue/"
         weight: 4
       - name: "Code of Conduct"
         url: "/codeofconduct"
