--- a/driconnect/config.yaml
+++ b/driconnect/config.yaml
@@ -24,18 +24,21 @@ languages:
       - name: "Program"
         url: "/program/"
         weight: 2
-      - name: "Attending"
-        url: "/attending/"
-        weight: 3
-      - name: "Accommodations"
-        url: "/accommodations/"
+      - name: "Registration"
+        url: "/registration/"
+        weight: 3  
+      #- name: "Attending"
+        #url: "/attending/"
+        #weight: 3
+      #- name: "Accommodations"
+        #url: "/accommodations/"
+        #weight: 4
+      - name: "Venue"
+        url: "/venue/"
         weight: 4
-      - name: "Location"
-        url: "/location/"
-        weight: 5
       - name: "Code of Conduct"
         url: "/codeofconduct"
-        weight: 6
+        weight: 5
     weight: 10
   fr:
     languageName: "Français"
@@ -47,16 +50,19 @@ languages:
       - name: "Programme"
         url: "/fr/programme/"
         weight: 2
-      - name: "Information"
-        url: "/fr/information/"
-        weight: 3
-      - name: "Hébergement"
-        url: "/fr/hebergement/"
-        weight: 4
+      - name: "Inscription"
+        url: "/fr/inscription/"
+        weight: 3  
+      #- name: "Information"
+        #url: "/fr/information/"
+        #weight: 3
+      #- name: "Hébergement"
+        #url: "/fr/hebergement/"
+        #weight: 4
       - name: "Lieu"
         url: "/fr/lieu/"
-        weight: 5
+        weight: 4
       - name: "Code de conduite"
         url: "/fr/codedeconduite"
-        weight: 6
+        weight: 5
     weight: 20
